# TidalHarmonicAnalysis

./: .clang-format  CMakeLists.txt  README.md
include/: THAAP_global.h  astronomicallongitudes.h  harmonicanalysis.h  harmonicconstituent.h  nodalfactors.h  tidalharmonicanalysisglobal.h  utils.h
src/: astronomicallongitudes.cpp  harmonicanalysis.cpp  harmonicconstituent.cpp  nodalfactors.cpp  utils.cpp
